Add observability properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+management.wavefront.application.name=rest
+management.wavefront.application.service-name=app
 
+#distributed tracing sampling to 100%
+management.tracing.sampling.probability=1.0
