--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 management.wavefront.application.name=rest
 management.wavefront.application.service-name=app
 
-#distributed tracing sampling to 100%
+# Distributed tracing sampling to 100% (Example purposes only!)
 management.tracing.sampling.probability=1.0
