--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-management.wavefront.application.name=rest
-management.wavefront.application.service-name=app
-
+# Observability
+# management.wavefront.application.name=rest
+# management.wavefront.application.service-name=app
 # Distributed tracing sampling to 100% (Example purposes only!)
-management.tracing.sampling.probability=1.0
+# management.tracing.sampling.probability=1.0
