Add docker compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
+# Database
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+# Enable SQL logging
+spring.datasource.log-statement=true
+
+# Hibernate specific: Show SQL with formatted parameters
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 # Observability
 # management.wavefront.application.name=rest
 # management.wavefront.application.service-name=app
