--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,22 @@
+# Feature Flags
+feature.env.logging=false
+
 # Debug Spring Framework
 # logging.level.org.springframework.boot=DEBUG
 
-# Database
+# Database (Postgresql)
 # Check IDE (eclipse/intellij) configuration to set .env file path
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Database H2 (Local/Tests)
+#spring.datasource.url=jdbc:h2:mem:rest_db
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.h2.console.enabled=true
 
 # Enable SQL logging
 spring.datasource.log-statement=true
