--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
-DB_URL=<your-value>
+DB_URL=<your-value> # Use `localhost` if running without docker else service name
 DB_USERNAME=<your-value>
 DB_PASSWORD=<your-value>
 DB_NAME=<your-value>
