Add feature flag to seed database from Bean

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Feature Flags
 feature.env.logging=false
+feature.database.seed=false
 
 # Debug Spring Framework
 # logging.level.org.springframework.boot=DEBUG
