--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ networks:
     driver: bridge
 
 services:
-  app:
+  app: &app_defaults
     container_name: backend
     build: .
     ports:
@@ -25,6 +25,24 @@ services:
     depends_on:
       database:
         condition: service_healthy
+
+  app2:
+    <<: *app_defaults
+    container_name: backend_2
+    ports:
+      - "8081:8080"
+
+  nginx:
+    container_name: nginx
+    image: nginx:1.21.6
+    networks:
+      - rest-network
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - '80:80'
+    depends_on:
+      - app
 
   database:
     container_name: database
