Adjust nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,12 @@
-worker_processes 4;
-
-events {
-  worker_connections 250;
+upstream loadbalancer {
+  server app:8080;
+  server app2:8080;
 }
 
-http {
-  upstream backend {
-    server app:8080;
-    server app2:8081;
-  }
-
-  server {
-    listen 80;
-    location / {
-      proxy_pass http://backend;
-    }
+server {
+  listen 80;
+  server_name localhost;
+  location / {
+    proxy_pass http://loadbalancer;
   }
 }
