--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,9 +19,6 @@ services:
       - DB_URL=${DB_URL}
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
-      - DB_NAME=${DB_NAME}
-      - PGADMIN_MAIL=${PGADMIN_MAIL}
-      - PGADMIN_PASSWORD=${PGADMIN_PASSWORD}
     depends_on:
       database:
         condition: service_healthy
@@ -38,7 +35,7 @@ services:
     networks:
       - rest-network
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - '80:80'
     depends_on:
