--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
     depends_on:
+      redis:
+        condition: service_healthy
       database:
         condition: service_healthy
 
@@ -73,3 +75,13 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASSWORD}
     ports:
       - "5050:80"
+
+  redis:
+    container_name: redis
+    image: 'redis:7.2.4'
+    ports:
+      - '6379:6379'
+    networks:
+      - rest-network
+    healthcheck:
+      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
