Add Cache and Redis properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 # Feature Flags
 feature.env.logging=false
-feature.database.seed=false
+feature.database.seed=true
 
 # Debug Spring Framework
 # logging.level.org.springframework.boot=DEBUG
+
+# Cache
+spring.cache.type=redis
+spring.cache.cache-names=employees,orders
+spring.data.redis.host=redis
+spring.data.redis.port=6379
+spring.cache.redis.time-to-live=1m
+# CacheConfig is overwritting the TTL
 
 # Database (Postgresql)
 # Check IDE (eclipse/intellij) configuration to set .env file path
